syntax = "proto3";
package pb;
import "user.proto";
option go_package = "github.com/amer-web/simple-bank/pb";

message CreateUserRequest {
  string username = 1;
  string full_name = 2;
  string email = 3 ;
  string password = 4;
}

message CreateUserResponse {
  User user = 1;
  string access_token = 2;
}